2001-04-06  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-edit-current-url): New command.
	(w3m-mode-map): `w3m-edit-current-url' is registered.
	(w3m-save-this-url): Removed.
	(w3m-decode-encoded-buffer): Use `w3m-which-command' in order to
	find appropriate command in Windows.

2001-04-05  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-xemacs.el (shimbun-get-headers): Examine
	use-entire-index slot and use shimbun-search-id.
	(shimbun-xemacs-coding-system): Fixed redundant definition.

2001-04-05  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* Makefile.in (default): Depends `Makefile'.
	(Makefile): Removed `--recheck' option in order to re-create
	itself when `Makefile.in' or `config.status' is updated.

2001-04-05  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (top): Define w3m-read-coding-system().
	(w3m-content-type-alist): Change "fiber" to "fiber.exe".
	(w3m-quit): Remove hook if no w3m exist.
	(w3m-arrived-add): Add 'coding-system entry.
	(w3m-arrived-coding-system): New function.
	(w3m-arrived-setup): Handle 'coding-system entry.
	(w3m-arrived-shutdown): Ditto.
	(w3m-goto-url): Handle specified coding-system.
	(w3m-redisplay-with-coding-system): Use w3m-read-coding-system.
	If no coding-system specify, set 'reset.

	* w3m-om.el (w3m-read-coding-system): New function.

2001-04-05  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/shimbun.el (shimbun-open-group): Reload header index.

	* shimbun/sb-namazu.el (shimbun-namazu-group-url-alist): New variable.
	(shimbun-index-url): Use it.
	(shimbun-get-headers): Set path argument of
	`shimbun-namazu-get-headers-1';
	Catch 'stop signal.
	(shimbun-namazu-get-headers-1): Added argument `path';
	Set relative path to xref;
	Throw 'stop and return headers if `shimbun-search-id' returns non-nil.

	* shimbun/sb-asahi.el (shimbun-asahi): Don't inherit shimbun.
	(shimbun-asahi-coding-system): Fixed redundant definition.
